hphp/hack/test/typecheck/vec/vec_append_wrong_type.php
<?hh // partial

function foo(vec<string> $x): void {
  $x[] = 5;
}
